# DBPro-CMake

./: CMakeLists.txt  DBProGeneratedTargets.cmake  FindDirectX.cmake  gencmake.sh
Dark Basic Public Shared/: gencmake.sh
Dark Basic Public Shared/Dark Basic Pro SDK/DarkSDK/Transforms/: Transforms.vcxproj
Dark Basic Public Shared/Dark Basic Pro SDK/Shared/CSG/: xmain.cpp
Dark Basic Public Shared/Dark Basic Pro SDK/Shared/CustomBSP/: Collision.cpp
Dark Basic Public Shared/Dark Basic Pro SDK/Shared/EnhancedMatrix/: CEnhancedMatrixC.h  CEnhancedMatrixDataC.h  CEnhancedMatrixManagerC.h
Dark Basic Public Shared/Dark Basic Pro SDK/Shared/EnhancedMatrix/Modes/: CModeC.h
Dark Basic Public Shared/Dark Basic Pro SDK/Shared/EnhancedMatrix/Modes/QuadTrees/: CQuadTreesC.cpp  CQuadTreesC.h
Dark Basic Public Shared/Dark Basic Pro SDK/Shared/Image/icons/: DIB.C  ICONS.C
Dark Basic Public Shared/Dark Basic Pro SDK/Shared/Light/: CLightManagerC.h
Dark Basic Public Shared/Dark Basic Pro SDK/Shared/Objects/: Collision.h
Dark Basic Public Shared/Dark Basic Pro SDK/Shared/Q2BSP/: CQ2BSP.cpp  CQ2BSP.h  Collision.cpp  Loader.cpp  Textures.cpp
Dark Basic Public Shared/Dark Basic Pro SDK/Shared/Q3BSP/: CBSPFile.h
Dark Basic Public Shared/Dark Basic Pro SDK/Shared/Q3BSP/col/: col_response.cpp
Dark Basic Public Shared/Dark Basic Pro SDK/Shared/Setup/: CGfxC.cpp
Dark Basic Public Shared/Dark Basic Pro SDK/Shared/Sound/: dsutil.cpp
Dark Basic Public Shared/Dark Basic Pro SDK/Shared/Sprites/: CSpriteManagerC.h
Dark Basic Public Shared/Dark Basic Pro SDK/Shared/System/: main.cpp
Dark Basic Public Shared/Dark Basic Pro SDK/Shared/Vectors/: cVectorDataC.h  cVectorManagerC.h
DarkGDK/Dark Basic Pro SDK/Shared/Light/: CLightManagerC.h
DarkGDK/Dark Basic Pro SDK/Shared/Q3BSP/: CBSPFile.h
DarkGDK/Dark Basic Pro SDK/Shared/SpecialEffects/: CParticleManagerC.cpp
DarkGDK/Dark Basic Pro SDK/Shared/Sprites/: CSpriteManagerC.h
DarkGDK/Dark Basic Pro SDK/Shared/Vectors/: cVectorDataC.h  cVectorManagerC.h
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/: Dark SDK.sln
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/3DMaths/: 3DMaths.vcxproj
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Animation/: Animation.vcxproj
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Basic2D/: Basic2D.vcxproj  Basic2D.vcxproj.filters
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Basic3D/: Basic3D.vcxproj  Basic3D.vcxproj.filters
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Bitmap/: Bitmap.vcxproj  Bitmap.vcxproj.filters
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Camera/: Camera.vcxproj
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Conv3DS/: Conv3DS.vcxproj
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/ConvMD2/: ConvMD2.vcxproj
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/ConvMD3/: ConvMD3.vcxproj
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/ConvMDL/: ConvMDL.vcxproj
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/ConvX/: ConvX.vcxproj
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Core/: Core.vcxproj
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Display/: Display.vcxproj  Display.vcxproj.filters
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/FTP/: FTP.vcxproj
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/File/: File.vcxproj  File.vcxproj.filters
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Image/: Image.vcxproj
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Input/: Input.vcxproj  Input.vcxproj.filters
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Library2/: Library2.vcxproj  Library2.vcxproj.filters
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Light/: Light.vcxproj
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Matrix/: Matrix.vcxproj
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Memblocks/: Memblocks.vcxproj
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Multiplayer/: Multiplayer.vcxproj
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Music/: Music.vcxproj  Music.vcxproj.filters
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/ODEPhysics/: ODE.vcxproj
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Particles/: Particles.vcxproj  Particles.vcxproj.filters
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Sound/: Sound.vcxproj  Sound.vcxproj.filters
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Sprite/: Sprite.vcxproj  Sprite.vcxproj.filters
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/System/: System.vcxproj
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Terrain/: Terrain.vcxproj
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/Text/: Text.vcxproj
DarkGDK/DarkGDK/Code/Compiler - Visual Studio 9/World/: World.vcxproj
DarkGDK/DarkGDK/Code/Include/: DarkSDK.h  DarkSDKOdePhysics.h
DarkGDK/DarkGDK/Code/Source/: DarkSDK.cpp  DarkSDK2.cpp
